# prog_calc_scientifico

./: nomedelfile.txt
esercitazione1/: CMakeLists.txt  prova6es1.cpp  prova7es1.cpp
esercitazione2/: CMakeLists.txt  prova1es2.cpp  prova2es2.cpp
esercitazione3/: CMakeLists.txt  prova1es3.cpp  rational.hpp
esercitazione4/: CMakeLists.txt  measure_sorts.cpp  sorts.hpp  test_bubblesort.cpp  test_insertionsort.cpp  test_selectionsort.cpp
esercitazione5/: CMakeLists.txt  Osservazioni.txt  generic_test.hpp  grafico.m  measuresorts.cpp  sorts.hpp  test_bubblesort.cpp  test_insertionsort.cpp  test_mergesort.cpp  test_quicksort.cpp  test_quicksorthybrid.cpp  test_selectionsort.cpp  times_debug.csv  times_release.csv
esercitazione8/: CMakeLists.txt  test_un_edge.cpp  test_un_graph.cpp  un_edge.hpp  un_graph.hpp
